# BubbleMovies

./: BubbleMovies.pro  CMakeLists.txt  Makefile  bubblemovies  makefile
header/: api.h  mainwindow.h
header/datastructures/: hash.h  tst.h
header/interfaces/: comparable.h  hashable.h
header/model/: movie.h  rating.h  tag.h  user.h
header/utils/: intHC.h  sort.h  stringHashable.h  utils.h
source/: api.cpp  api.h  main.cpp  mainwindow.cpp  mainwindow.ui
source/datastructures/: hash.h  hash.ipp  table.cpp  tst.cpp  tst.h
source/interfaces/: comparable.h  hashable.h
source/model/: movie.cpp  movie.h  rating.cpp  rating.h  tag.cpp  tag.h  user.cpp  user.h
source/utils/: intHC.cpp  intHC.h  sort.h  sort.ipp  stringHashable.cpp  stringHashable.h  utils.cpp  utils.h
